# DESAFIO_QA_BACKEND

./: .env  README.md  base.resource  pyproject.toml
resource/actions/: given.resource  then.resource  when.resource
resource/constants/: balance.yaml  internalTransfers.yaml  statements.yaml
resource/service/: accountsRequest.resource  balanceRequest.resource  internalTransferRequest.resource  statementsRequest.resource
resource/service/json/: internalTransfers.json
resource/utils/: utils.py
test/: balance.robot  internalTransfers.robot  statements.robot
